# StarKnights

./: CMakeLists.txt
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/com/anatolich/stargame/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/anatolich/stargame/: MainActivity.java
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/anatolich/stargame/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
StarKnights/: CMakeLists.txt  Launcher.cpp
StarKnights/Game/: AudioMenu.cpp  AudioMenu.hpp  Earth.cpp  Earth.hpp  Tank.cpp  Tank.hpp  UserMenu.cpp  UserMenu.hpp
StarKnights/StarEngine/: CMakeLists.txt
StarKnights/StarEngine/libs/box2d-main/: CMakeLists.txt
StarKnights/StarEngine/libs/glew/: CMakeLists.txt
StarKnights/StarEngine/src/: ActionManager.cpp  ActionManager.hpp  AudioManager.cpp  AudioManager.hpp  Bitmap.cpp  Bitmap.hpp  Button.cpp  Button.hpp  Engine.cpp  Engine.hpp  EventsManager.cpp  EventsManager.hpp  FileManager.cpp  FileManager.hpp  FrameBuffer.cpp  FrameBuffer.hpp  MenuItem.cpp  MenuItem.hpp  MeshData.hpp  Node.cpp  Node.hpp  ParticleBuffer.cpp  ParticleBuffer.hpp  PhysicsSprite.cpp  PhysicsSprite.hpp  Renderer.hpp  SchedulerManager.cpp  SchedulerManager.hpp  ShaderProgram.hpp  Sound.cpp  Sound.hpp  Sprite.cpp  Sprite.hpp  TaskManager.hpp  Texture.cpp  Texture.hpp  UIManager.cpp  UIManager.hpp  VertexBuffer.hpp  VertexData.hpp  (+1 more)
StarKnights/StarEngine/src/GL/: GLBlurProgram.cpp  GLBlurProgram.hpp  GLDrawProgram.cpp  GLDrawProgram.hpp  GLFrameBuffer.cpp  GLFrameBuffer.hpp  GLHeaders.hpp  GLParticleBuffer.cpp  GLParticleBuffer.hpp  GLParticleProgram.cpp  GLParticleProgram.hpp  GLPpProgram.cpp  GLPpProgram.hpp  GLProgram.cpp  GLProgram.hpp  GLRenderer.cpp  GLRenderer.hpp  GLSpriteProgram.cpp  GLSpriteProgram.hpp  GLTexture.cpp  GLTexture.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp
StarKnights/StarEngine/src/SDL/: SDLWindow.cpp  SDLWindow.hpp
StarKnights/StarEngine/src/Shaders/: blur_frag_shader.vert  particle_frag_shader.vert  particle_vertex_shader.vert  pp_frag_shader.vert  pp_vertex_shader.vert  sprite_frag_shader.vert  sprite_vertex_shader.vert
StarKnights/StarEngine/src/Utils/: GeneralUtils.hpp  ResourceManager.hpp  ShaderUtils.hpp
StarKnights/StarEngine/utils/: GeneralUtils.hpp
